--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,17 @@
       <scope>compile</scope>
     </dependency>
 
+  <!--数据库-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.18</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.3</version>
+    </dependency>
 
   </dependencies>
 
