--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,23 @@
       <artifactId>hutool-json</artifactId>
       <version>${hutool.version}</version>
     </dependency>
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-core</artifactId>
+      <version>${hutool.version}</version>
+    </dependency>
+
+    <!--文件上传 servlet3.0 以下需要， web_app的版本可以从web.xml中的version看出来-->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
 
   </dependencies>
 
