--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2.5.xsd"
          version="2.5">
 
     <!--
@@ -26,6 +26,17 @@
     </listener>
     <!-- end -->
 
+    <!-- 监听程序的状态 -->
+    <listener>
+        <listener-class>com.mvcoder.springmvc.listener.AppContextListener</listener-class>
+    </listener>
+    <listener>
+    <listener-class>com.mvcoder.springmvc.listener.AppHttpSessionListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>com.mvcoder.springmvc.listener.AppHttpRequestListener</listener-class>
+    </listener>
+    
 
     <display-name>Archetype Created Web Application</display-name>
     <servlet>
