--- a/src/main/resources/mybatis/mysql.properties
+++ b/src/main/resources/mybatis/mysql.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/springmvc_test
+jdbc.url=jdbc:mysql://127.0.0.1:3306/springmvc_test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 jdbc.username=root
 jdbc.password=08130125cjj
